--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_collapsible-blocks.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/_collapsible-blocks.less
@@ -30,7 +30,7 @@
 //  _____________________________________________
 
 .admin__collapsible-block-wrapper() {
-    border-bottom: 1px solid @collapsible__border-color;
+    //border-bottom: 1px solid @collapsible__border-color;
 }
 
 .admin__collapsible-sub-block-wrapper() {
