MAGETWO-44225: Items requiring attention section of minicart is not updated after items removal

--- a/app/design/frontend/Magento/blank/Magento_AdvancedCheckout/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_AdvancedCheckout/web/css/source/_module.less
@@ -85,9 +85,6 @@
             text-align: center;
             .action {
                 margin-bottom: @indent__s;
-                &.tocart {
-                    margin-right: @indent__s;
-                }
             }
         }
     }
@@ -141,6 +138,12 @@
         &:extend(.abs-shopping-cart-items-desktop all);
         .actions {
             text-align: left;
+        }
+        .actions.primary {
+            float: right;
+        }
+        .block-content {
+            &:extend(.abs-add-clearfix-desktop all);
         }
     }
 }
