--- a/app/design/frontend/Magento/luma/Magento_AdvancedCheckout/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_AdvancedCheckout/web/css/source/_module.less
@@ -89,7 +89,7 @@
                 font-weight: @h2__font-weight;
             }
         }
-        .actions.secondary {
+        .actions {
             text-align: center;
             .action {
                 display: block;
@@ -154,12 +154,16 @@
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
     .block-cart-failed {
         &:extend(.abs-shopping-cart-items-desktop all);
-        .actions.secondary {
-            text-align: right;
+        .secondary {
             .action {
-                display: inline-block;
-                margin: 0 0 0 @indent__s;
+                margin: 0;
             }
+        }
+        .actions.primary {
+            float: right;
+        }
+        .block-content {
+            &:extend(.abs-add-clearfix-desktop all);
         }
     }
 }
