MAGETWO-45150: [FoD-M2] Privacy violation and Insecure password submission (10/26/15)
 - turned off autocomplete for all password form inputs

--- a/app/code/Magento/Checkout/view/frontend/web/template/authentication.html
+++ b/app/code/Magento/Checkout/view/frontend/web/template/authentication.html
@@ -64,7 +64,8 @@
                                        id="login-password"
                                        name="password"
                                        data-bind="attr: {autocomplete: autocomplete}"
-                                       data-validate="{required:true, 'validate-password':true}"/>
+                                       data-validate="{required:true, 'validate-password':true}"
+                                       autocomplete="off"/>
                             </div>
                         </div>
                         <!-- ko foreach: getRegion('additional-login-form-fields') -->
