--- a/app/code/Magento/Customer/view/frontend/templates/form/edit.phtml
+++ b/app/code/Magento/Customer/view/frontend/templates/form/edit.phtml
@@ -42,19 +42,19 @@
         <div class="field password current required">
             <label class="label" for="current-password"><span><?php /* @escapeNotVerified */ echo __('Current Password') ?></span></label>
             <div class="control">
-                <input type="password" class="input-text" name="current_password" id="current-password">
+                <input type="password" class="input-text" name="current_password" id="current-password" autocomplete="off">
             </div>
         </div>
         <div class="field new password required">
             <label class="label" for="password"><span><?php /* @escapeNotVerified */ echo __('New Password') ?></span></label>
             <div class="control">
-                <input type="password" class="input-text" name="password" id="password">
+                <input type="password" class="input-text" name="password" id="password" autocomplete="off">
             </div>
         </div>
         <div class="field confirm password required">
             <label class="label" for="password-confirmation"><span><?php /* @escapeNotVerified */ echo __('Confirm New Password') ?></span></label>
             <div class="control">
-                <input type="password" class="input-text" name="password_confirmation" id="password-confirmation">
+                <input type="password" class="input-text" name="password_confirmation" id="password-confirmation" autocomplete="off">
             </div>
         </div>
     </fieldset>
