--- a/app/code/Magento/Customer/view/frontend/templates/form/resetforgottenpassword.phtml
+++ b/app/code/Magento/Customer/view/frontend/templates/form/resetforgottenpassword.phtml
@@ -18,13 +18,13 @@
         <div class="field password required">
             <label class="label" for="password"><span><?php /* @escapeNotVerified */ echo __('New Password'); ?></span></label>
             <div class="control">
-                <input type="password" class="input-text" name="password" id="password" data-validate="{required:true, 'validate-password':true}">
+                <input type="password" class="input-text" name="password" id="password" data-validate="{required:true, 'validate-password':true}" autocomplete="off">
             </div>
         </div>
         <div class="field confirmation required">
             <label class="label" for="password-confirmation"><span><?php /* @escapeNotVerified */ echo __('Confirm New Password'); ?></span></label>
             <div class="control">
-                <input type="password" class="input-text" name="password_confirmation" id="password-confirmation" data-validate="{required:true,equalTo:'#password'}">
+                <input type="password" class="input-text" name="password_confirmation" id="password-confirmation" data-validate="{required:true,equalTo:'#password'}" autocomplete="off">
             </div>
         </div>
     </fieldset>
