JS-306: Fix height of thumbnails for mobile devices

--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -644,6 +644,8 @@
 
 }
 .fotorama__fullscreen-icon,
+.fotorama__zoom-out,
+.fotorama__zoom-in,
 .fotorama__video-close {
     z-index: @z-index-10;
 }
