--- a/app/code/Magento/Swatches/view/adminhtml/templates/catalog/product/attribute/js.phtml
+++ b/app/code/Magento/Swatches/view/adminhtml/templates/catalog/product/attribute/js.phtml
@@ -11,8 +11,9 @@
     {
         "*": {
             "swatchesProductAttributes": {
-                "hiddenFields": <?php /* @escapeNotVerified */ echo \Zend_Json::encode($this->helper('Magento\Catalog\Helper\Data')->getAttributeHiddenFields()); ?>
-            }
+                "hiddenFields": <?php /* @escapeNotVerified */ echo json_encode($this->helper('Magento\Catalog\Helper\Data')->getAttributeHiddenFields()); ?>
+            },
+            "swatchesTypeChange": { }
         }
     }
 </script>
