--- a/app/code/Magento/Translation/view/adminhtml/templates/translate_inline.phtml
+++ b/app/code/Magento/Translation/view/adminhtml/templates/translate_inline.phtml
@@ -38,7 +38,7 @@
                         <label for="custom_<%- i %>">Custom:</label>
                     </th>
                     <td class="value">
-                        <input name="translate[<%- i %>][original]" type="hidden" value="<%- data.escape(item.original) %>"/>
+                        <input name="translate[<%- i %>][original]" type="hidden" value="<%- item.original %>"/>
                         <input id="custom_<%- i %>"
                                name="translate[<%- i %>][custom]"
                                class="input-text"
