MAGETWO-45097: Long SKU breaks "view Product" Storefront page layout if responsive

--- a/app/design/frontend/Magento/blank/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Catalog/web/css/source/_module.less
@@ -188,6 +188,7 @@
                     > .value {
                         display: inline-block;
                         vertical-align: top;
+                        word-break: break-all;
                     }
                     .type {
                         margin-right: @indent__xs;
