MAGETWO-45436: Eliminate multiple escaping in the inline translation popup
 - decoded all special characters before displaying in translation dialog
 - remove additional encoding from dialog's Custom field

--- a/app/code/Magento/Translation/view/adminhtml/templates/translate_inline.phtml
+++ b/app/code/Magento/Translation/view/adminhtml/templates/translate_inline.phtml
@@ -42,7 +42,7 @@
                         <input id="custom_<%- i %>"
                                name="translate[<%- i %>][custom]"
                                class="input-text"
-                               value="<%- data.escape(item.translated) %>" />
+                               value="<%- item.translated %>" />
                     </td>
                 </tr>
             </table></div>
