MAGETWO-45098: Long Category name breaks Navigation Menu Storefront layout if responsive

--- a/app/design/frontend/Magento/blank/web/css/source/_navigation.less
+++ b/app/design/frontend/Magento/blank/web/css/source/_navigation.less
@@ -154,7 +154,9 @@
 
     .nav-before-open {
         height: 100%;
+        overflow-x: hidden;
         width: 100%;
+
         .page-wrapper {
             .lib-css(transition, left .3s, 1);
             height: 100%;
