--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/_menu.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/_menu.less
@@ -233,7 +233,12 @@
             transition-timing-function: ease-in-out;
             visibility: hidden;
             z-index: @submenu__z-index - 1;
+            
+            .ie11 & {
+                height: 100%;
+            }
         }
+
         &._show  {
             > .submenu {
                 transform: translateX(0);
@@ -253,9 +258,11 @@
             a {
                 display: block;
                 padding: @submenu-link__padding-vertical @submenu__padding-horizontal;
+
                 &:hover {
                     background-color: @submenu-link__focus__background-color;
                 }
+
                 &:active {
                     padding-top: @submenu-link__padding-vertical + .1rem;
                     padding-bottom: @submenu-link__padding-vertical - .1rem;
@@ -269,9 +276,11 @@
         li {
             min-width: @submenu-column__width;
         }
+
         a {
             color: @submenu-link__color;
             transition: background-color .1s linear;
+
             &:hover,
             &:focus {
                 box-shadow: none;
