MAGETWO-45546: Multi select in Cache & Index grids not clickable as expected

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_temp.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_temp.less
@@ -378,6 +378,7 @@ label.mage-error {
         &:extend(.abs-cleafix);
 
         .action-select-multiselect {
+            -webkit-appearance: menulist-button;
             height: 38px;
             left: -1rem;
             min-width: 0;
