MAGETWO-45442: Navigation Menu is cut in IE 11

--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/_menu.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/_menu.less
@@ -234,6 +234,7 @@
             visibility: hidden;
             z-index: @submenu__z-index - 1;
             
+            .ie10 &,
             .ie11 & {
                 height: 100%;
             }
