MAGETWO-45563: Cannot manually add products to a configurable product
- fix "disable"

--- a/app/code/Magento/Ui/view/base/web/templates/grid/cells/multiselect.html
+++ b/app/code/Magento/Ui/view/base/web/templates/grid/cells/multiselect.html
@@ -11,6 +11,7 @@
         data-action="select-row"
         data-bind="
             staticChecked: $col.selected,
+            disable: $col.disabled.indexOf($row()[$col.indexField]) != -1 ,
             checkedValue: $row()[$col.indexField],
             attr: {
                 id: 'check' + $row()[$col.indexField]
