JS-292: Zoom doesn't work smooth - drag event occurs on zoom in

--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -1126,7 +1126,7 @@
                 cursor: pointer;
                 max-width: none;
                 max-height: none;
-                transition-property: width, height, top, left;
+                transition-property: width, height, bottom, right, top, left;
             }
             &.fotorama__img--draggable {
                 cursor: move;
